syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme";
option java_outer_classname = "HelloGrpcProto";

package hello;

service HelloGrpc {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service RouteGuide {
    rpc ListFeatures(Rectangle) returns (stream Feature) {} // server to client stream
    rpc RecordRoute(stream Point) returns (RouteSummary) {} // client to server stream
    rpc RouteChat(stream RouteNote) returns (stream RouteNote) {} // bidirectional stream
}

message Rectangle {
  Point lo = 1;
  Point hi = 2;
}

message Feature {
  string name = 1;
  Point location = 2;
}

message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

message RouteNote {
  Point location = 1;
  string message = 2;
}

message RouteSummary {
  int32 point_count = 1;
  int32 feature_count = 2;
  int32 distance = 3;
  int32 elapsed_time = 4;
}
